Remove JDK1.4 specific code